
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32 ;


 int ERRCODE_INVALID_PARAMETER_VALUE ;
 int ERROR ;
 int* b64lookup ;
 int ereport (int ,int ) ;
 int errcode (int ) ;
 int errhint (char*) ;
 int errmsg (char*,...) ;

__attribute__((used)) static unsigned
pg_base64_decode(const char *src, unsigned len, char *dst)
{
 const char *srcend = src + len,
      *s = src;
 char *p = dst;
 char c;
 int b = 0;
 uint32 buf = 0;
 int pos = 0,
    end = 0;

 while (s < srcend)
 {
  c = *s++;

  if (c == ' ' || c == '\t' || c == '\n' || c == '\r')
   continue;

  if (c == '=')
  {

   if (!end)
   {
    if (pos == 2)
     end = 1;
    else if (pos == 3)
     end = 2;
    else
     ereport(ERROR,
       (errcode(ERRCODE_INVALID_PARAMETER_VALUE),
        errmsg("unexpected \"=\" while decoding base64 sequence")));
   }
   b = 0;
  }
  else
  {
   b = -1;
   if (c > 0 && c < 127)
    b = b64lookup[(unsigned char) c];
   if (b < 0)
    ereport(ERROR,
      (errcode(ERRCODE_INVALID_PARAMETER_VALUE),
       errmsg("invalid symbol \"%c\" while decoding base64 sequence", (int) c)));
  }

  buf = (buf << 6) + b;
  pos++;
  if (pos == 4)
  {
   *p++ = (buf >> 16) & 255;
   if (end == 0 || end > 1)
    *p++ = (buf >> 8) & 255;
   if (end == 0 || end > 2)
    *p++ = buf & 255;
   buf = 0;
   pos = 0;
  }
 }

 if (pos != 0)
  ereport(ERROR,
    (errcode(ERRCODE_INVALID_PARAMETER_VALUE),
     errmsg("invalid base64 end sequence"),
     errhint("Input data is missing padding, is truncated, or is otherwise corrupted.")));

 return p - dst;
}
